--- a/02 - JS and CSS Clock/style.css
+++ b/02 - JS and CSS Clock/style.css
@@ -42,4 +42,8 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%; /* moves it along the x axis */
+      transform: rotate(90deg); /* hands point towards 12 o'clock */
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
